apps/plex/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - name: plex-web
      port: 32400
      targetPort: 32400
      protocol: TCP
    - name: plex-companion
      port: 3005
      targetPort: 3005
      protocol: TCP
    - name: plex-roku
      port: 8324
      targetPort: 8324
      protocol: TCP
    - name: gdm-32410
      port: 32410
      targetPort: 32410
      protocol: UDP
    - name: gdm-32412
      port: 32412
      targetPort: 32412
      protocol: UDP
    - name: gdm-32413
      port: 32413
      targetPort: 32413
      protocol: UDP
    - name: gdm-32414
      port: 32414
      targetPort: 32414
      protocol: UDP
