apps/plex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: plex.${CLUSTER_DOMAIN}
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - plex.${CLUSTER_DOMAIN}
      secretName: plex-tls
  rules:
    - host: plex.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
